--- a/src/index.css
+++ b/src/index.css
@@ -49,6 +49,12 @@ body {
   width: 100%;
   font-size: var(--text-fontsize-sm);
   color: var(--text-color);
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  outline: none;
 }
 
 .input:hover {
@@ -57,6 +63,7 @@ body {
 
 .input:focus {
   outline: none;
+  box-shadow: 0 0 5px rgba(16, 114, 219, 1);
 }
 
 .input::placeholder {
