--- a/src/components/auth/auth.module.css
+++ b/src/components/auth/auth.module.css
@@ -5,6 +5,7 @@
   margin: 10rem auto;
   border-radius: 5px;
   box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
+  position: relative;
 }
 
 .authContainer h4 {
@@ -100,10 +101,22 @@
 
 .error {
   color: var(--white-color);
-  background-color: rgba(231, 58, 35, 0.8);
-  padding: 1rem 1.2rem;
+  color: rgb(233, 40, 15);
+  padding: 1rem 1.5rem;
   font-size: 1.4rem;
+  font-weight: 600;
   border-radius: 5px;
-  display: block;
   margin: 1rem 0;
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.spinner {
+  width: 3rem;
+  height: 3rem;
+  position: absolute;
+  bottom: 15px;
+  left: 50%;
 }
