--- a/src/components/auth/auth.module.css
+++ b/src/components/auth/auth.module.css
@@ -23,7 +23,8 @@
   font-weight: 500;
 }
 
-.input {
+.input,
+.inputInvalid {
   width: 100%;
   padding: 1.2rem 0rem;
   border-radius: 3px;
@@ -31,13 +32,10 @@
   border-bottom: 1px solid var(--md-grey-color);
   background: transparent;
   margin-top: 0.5rem;
-}
-
-.input:valid {
   border-bottom: 1px solid green;
 }
 
-.input:invalid {
+.inputInvalid {
   border-bottom: 1px solid var(--red-color);
 }
 
@@ -49,7 +47,8 @@
   opacity: 0.6;
 }
 
-.authBtn {
+.authBtn,
+.disabledBtn {
   margin-top: 1.5rem;
   font-weight: 500;
   color: var(--text-color);
@@ -63,6 +62,23 @@
   overflow: hidden;
   text-transform: uppercase;
 }
+
+.disabledBtn {
+  background: var(--md-grey-color);
+  color: #ffffff;
+  border: 1px solid var(--md-grey-color);
+  outline: none;
+}
+
+.spinner {
+  width: 3.3rem;
+  height: 3.3rem;
+  position: absolute;
+  top: 50%;
+  right: 50%;
+  transform: translate(50%, -50%);
+}
+
 .authBtn:focus {
   outline: none;
 }
@@ -99,24 +115,16 @@
   text-align: center;
 }
 
+.errorContainer {
+  margin-top: 1rem;
+}
+
 .error {
   color: var(--white-color);
   color: rgb(233, 40, 15);
-  padding: 1rem 1.5rem;
-  font-size: 1.4rem;
+  font-size: 1.3rem;
   font-weight: 600;
-  border-radius: 5px;
-  margin: 1rem 0;
-  position: absolute;
-  bottom: 15px;
-  left: 50%;
-  transform: translateX(-50%);
-}
-
-.spinner {
-  width: 3rem;
-  height: 3rem;
-  position: absolute;
-  bottom: 15px;
-  left: 50%;
+  background: #ffd2d2;
+  padding: 0.3rem 0.7rem;
+  border-radius: 3px;
 }
