All routes are guarded be it logged in or logged out

--- a/src/components/poll-admin/poll.module.css
+++ b/src/components/poll-admin/poll.module.css
@@ -23,3 +23,10 @@
   font-weight: 400;
   font-size: var(--text-fontsize-sm);
 }
+
+.otherInput {
+  background: transparent;
+  border: none;
+  border-bottom: 1px solid var(--md-grey-color);
+  outline: none;
+}
