--- a/src/components/layout/profile.module.css
+++ b/src/components/layout/profile.module.css
@@ -57,14 +57,27 @@
 }
 
 .imageContainer {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2.5rem;
-  width: 20rem;
-  height: 20rem;
+  margin: 2rem auto;
+  width: 25rem;
+  height: 25rem;
   border-radius: 50%;
   overflow: hidden;
+
+  position: relative;
+}
+
+.spinner {
+  width: 4rem;
+  height: 4rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.image {
+  width: 100%;
+  height: auto;
 }
 
 .uploadedImage {
