--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
   --red-color: #d34836;
   --red-color-error: rgb(233, 40, 15);
   --green-color: #388828;
-  --message-color: rgba(56, 136, 40, 0.8);
+  --message-color: rgba(56, 136, 40, 0.6);
   --blue-color: #1072db;
   --blue-color-hover: #2a89fd;
 
@@ -316,6 +316,11 @@ body {
 
 .hover-darker:hover {
   background: var(--blue-color-hover) !important;
+  transition: background 0.3s, color 0.1s;
+}
+
+.hover-darker-grey:hover {
+  background: #e9e9e9 !important;
   transition: background 0.3s, color 0.1s;
 }
 
