Polls can now be cleared from firebase database

--- a/src/components/poll-admin/pollForm.module.css
+++ b/src/components/poll-admin/pollForm.module.css
@@ -26,3 +26,11 @@
 .formBtns {
   grid-column-start: 2;
 }
+
+.spinner {
+  width: 30px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
